Anonymous | Login | 2021-01-16 11:31 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0031815 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2020-10-01 14:44 | 2020-11-21 13:28 | ||||||||
Reporter | bugmaster | ||||||||||||
Assigned To | bugmaster | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | verified | Resolution | fixed | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 7.4.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0031815: Visualization, TKOpenGl - avoid XResizeWindow() within OpenGl_Window::Resize() | ||||||||||||
Description | Description: At line 736 there is a call: XResizeWindow (aDisp, myGlContext->myWindow, (unsigned int )myWidth, (unsigned int )myHeight); which is used only under Linux. It seems that this function call is not actual for the current OpenGl driver architecture. | ||||||||||||
Steps To Reproduce | N/A | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | Not required | ||||||||||||
Attached Files | |||||||||||||
![]() |
|||||||
|
![]() |
|
(0096612) git (administrator) 2020-11-09 10:55 |
Branch CR31815 has been created by kgv. SHA-1: a8cb3fe4e2f6c9660563dfc19e579ad25edd5be5 Detailed log of new commits: Author: kgv Date: Mon Nov 9 10:55:34 2020 +0300 0031815: Visualization, TKOpenGl - avoid XResizeWindow() within OpenGl_Window::Resize() OpenGl_Window::Resize() no more calls XResizeWindow() and relies only on dimensions returned by Aspect_Window. Xw_Window::Size() now ignores Window in case of virtual window in similar way as WNT_Window does. |
(0096619) kgv (developer) 2020-11-09 12:58 |
Patch is ready for review - OCCT branch: CR31815. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31815-master-KGV [^] |
(0096621) osa (developer) 2020-11-09 14:02 |
The patch was reviewed |
(0096940) bugmaster (administrator) 2020-11-21 12:49 |
Combination - OCCT branch : IR-2020-11-20 master SHA - c5892d852bb462075f9db03f31085e35d7b59f35 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-11-20 SHA - a5d1f89f5fa83c955e6a604f57a5b590eb433b43 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18024.090000000127 / 17964.340000000077 [+0.33%] Products Total CPU difference: 12166.12000000011 / 12169.520000000111 [-0.03%] Windows-64-VC14: OCCT Total CPU difference: 19696.90625 / 19723.125 [-0.13%] Products Total CPU difference: 13644.875 / 13567.078125 [+0.57%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0096958) git (administrator) 2020-11-21 13:28 |
Branch CR31815 has been deleted by inv. SHA-1: a8cb3fe4e2f6c9660563dfc19e579ad25edd5be5 |
![]() |
|||
occt: master e89202ea
Timestamp: 2020-11-09 07:55:34 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0031815: Visualization, TKOpenGl - avoid XResizeWindow() within OpenGl_Window::Resize() OpenGl_Window::Resize() no more calls XResizeWindow() and relies only on dimensions returned by Aspect_Window. Xw_Window::Size() now ignores Window in case of virtual window in similar way as WNT_Window does. |
||
mod - src/OpenGl/OpenGl_Window.cxx | [ Diff ] [ File ] | ||
mod - src/Xw/Xw_Window.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-10-01 14:44 | bugmaster | New Issue | |
2020-10-01 14:44 | bugmaster | Assigned To | => kgv |
2020-10-01 14:44 | bugmaster | Status | new => assigned |
2020-10-01 14:45 | bugmaster | Target Version | 7.6.0* => 7.5.0 |
2020-10-01 14:45 | bugmaster | Target Version | 7.5.0 => 7.6.0* |
2020-10-01 14:46 | bugmaster | Relationship added | related to 0027922 |
2020-11-09 10:50 | kgv | Summary | Visualization : Possible redundant function call in void OpenGl_Window::Resize() method => Visualization, TKOpenGl - avoid XResizeWindow() within OpenGl_Window::Resize() |
2020-11-09 10:50 | kgv | Steps to Reproduce Updated | View Revisions |
2020-11-09 10:55 | git | Note Added: 0096612 | |
2020-11-09 12:58 | kgv | Note Added: 0096619 | |
2020-11-09 12:58 | kgv | Assigned To | kgv => osa |
2020-11-09 12:58 | kgv | Status | assigned => resolved |
2020-11-09 14:02 | osa | Note Added: 0096621 | |
2020-11-09 14:02 | osa | Assigned To | osa => bugmaster |
2020-11-09 14:02 | osa | Status | resolved => reviewed |
2020-11-21 12:39 | bugmaster | Changeset attached | => occt master e89202ea |
2020-11-21 12:39 | bugmaster | Status | reviewed => verified |
2020-11-21 12:39 | bugmaster | Resolution | open => fixed |
2020-11-21 12:49 | bugmaster | Note Added: 0096940 | |
2020-11-21 12:49 | bugmaster | Test case number | => Not required |
2020-11-21 13:28 | git | Note Added: 0096958 |
Copyright © 2000 - 2021 MantisBT Team |