0031815: Visualization, TKOpenGl - avoid XResizeWindow() within OpenGl_Window::Resize()

OpenGl_Window::Resize() no more calls XResizeWindow() and relies only on dimensions returned by Aspect_Window.
Xw_Window::Size() now ignores Window in case of virtual window in similar way as WNT_Window does.